syntax = "proto3";
option java_package = "cn.monkey.data.pb";
option java_generate_equals_and_hash = true;
option java_outer_classname = "Command";

import "google/protobuf/any.proto";

package cn.monkey.data.pb;

message Pkg {
  // 消息包类型
  int64 cmdType = 2;

  google.protobuf.Any from = 3;

  google.protobuf.Any to = 4;
  // 内容
  bytes content = 5;
  // 消息时间戳
  int64 timestamp = 6;
}

message PkgGroup {
  repeated Pkg pkg = 1;
}

